# cockpit-networking-auto

./: README.md  config.yml  pyproject.toml  run.py
page_objects/: page_networking_check.py  page_networking_ipv6_check.py
test_suites/: test_networking_check.py  test_networking_ipv6_check.py
test_suites/test_networking_check.py.data/: networking_config.yml
test_suites/test_networking_ipv6_check.py.data/: networking_ipv6_config.yml
utils/: machine.py  rhvmapi.py
