[tool.poetry]
name = "cockpit-networking-auto"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.3.1"
selenium = "^3.141.0"
fabric = "^2.5.0"
flask = "^1.1.2"
avocado-framework = "^78.0"
avocado-framework-plugin-result-html = "^78.0"
simplejson = "^3.17.0"
requests = "^2.23.0"
xmltodict = "^0.12.0"
avocado-framework-plugin-varianter-yaml-to-mux = "^78.0"
pylint = "^2.4.4"
rhvhauto-common-utils = "^0.1.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
